sonarr/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: biggs
      volumes:
      - name: media
        hostPath:
          path: /mnt/media
      - name: sonarr
        hostPath:
          path: /dockerfs/sonarr
      - name: oauth2-proxy
        secret:
          secretName: oauth2-proxy
      - name: rtc
        hostPath:
          path: /dev/rtc
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        imagePullPolicy: Always
        volumeMounts:
        - name: sonarr
          subPath: config
          mountPath: /config
        - name: media
          subPath: downloads
          mountPath: /downloads
        - name: media
          subPath: anime
          mountPath: /media/anime
        - name: media
          subPath: tv
          mountPath: /media/tv
        - name: rtc
          mountPath: /dev/rtc
          readOnly: true
        ports:
        - name: sonarr
          containerPort: 8989
        livenessProbe:
          httpGet:
            path: /
            port: sonarr
          initialDelaySeconds: 60
          periodSeconds: 5
      - name: oauth2-proxy
        image: a5huynh/oauth2_proxy
        ports:
        - name: oauth2-proxy
          containerPort: 4180
        livenessProbe:
          httpGet:
            path: /
            port: oauth2-proxy
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - mountPath: /etc/oauth2-proxy
          name: oauth2-proxy
          readOnly: true
        args:
        - "-upstream=http://localhost:8989/"
        - "-cookie-domain=sonarr.desertbluffs.com"
        - "-redirect-url=https://sonarr.desertbluffs.com/oauth2/callback"
        - "-http-address=0.0.0.0:4180"
        - "-config=/etc/oauth2-proxy/config"
        - "-authenticated-emails-file=/etc/oauth2-proxy/authenticated-emails"
        - "-cookie-secure=true"
        - "-cookie-expire=168h0m"
        - "-cookie-refresh=60m"
        - "-skip-provider-button=true"
