sonarr/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sonarr.test
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr
          servicePort: 8989
